--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
         "compile": "tsc",
         "init": "cross-env INIT=true node dist/server.js",
         "watch": "concurrently \"tsc --watch\" \"yarn nodemon\"",
-        "watch-ts": "tsc --watch"
+        "watch-ts": "tsc --watch",
+        "build": "rollup -c",
+        "svelte-dev": "rollup -c -w",
+        "svelte-start": "sirv public --single --no-clear"
     },
     "dependencies": {
         "axios": "^0.27.2",
@@ -36,11 +39,17 @@
         "mysql2": "^2.3.3",
         "nock": "^13.2.9",
         "qrcode": "^1.5.1",
+        "rollup-plugin-copy": "^3.4.0",
+        "run": "^1.4.0",
         "sequelize": "^6.21.4",
+        "sirv-cli": "^2.0.0",
+        "uikit": "^3.15.20",
         "url-join": "^5.0.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
         "@types/chai": "^4.3.3",
         "@types/chai-http": "^4.2.0",
         "@types/express": "^4.17.13",
@@ -65,6 +74,13 @@
         "eslint-plugin-promise": "^6.0.0",
         "express-list-routes": "^1.1.3",
         "nodemon": "^2.0.19",
+        "rollup": "^2.3.4",
+        "rollup-plugin-css-only": "^3.1.0",
+        "rollup-plugin-livereload": "^2.0.0",
+        "rollup-plugin-svelte": "^7.0.0",
+        "rollup-plugin-terser": "^7.0.0",
+        "svelte": "^3.0.0",
+        "tinro": "^0.6.12",
         "ts-node": "^10.9.1",
         "typescript": "*"
     }
